# desktop-toy

./: Makefile  main.vala  meson.build
example/: plugin.vala
plugin/: .note.vala.kate-swp  base.vala  colorpicker.vala  note.vala  test.vala  yt_music.vala
src/: main.vala  plugin.c  plugin.vala  style.vala  util.vala  widget.vala
themes/amogus/: style.css  theme.ini
